Refactoring some of the concepts
